<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cat_nav2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noreply@group-a.com">docclock</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>cat_msgs_ros</depend>
  <depend>geometry_msgs</depend>

  <depend>nav2_common</depend>
  <depend>nav2_theta_star_planner</depend>
  <depend>nav2_smoother</depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_core</depend>
  <depend>tf2</depend>

  <depend>robot_localization</depend>

  <depend>slam_toolbox</depend>

  <export>
    <costmap_2d plugin="${prefix}/layers/wall_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
